@@ -51,4 +51,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+//    jvmArgs '--enable-preview'
 }
